# finch

./: .gitignore  README.md  finch.py  pyproject.toml  setup.py
.github/workflows/: create_release.yml
finch/: __main__.py  about.py  acl.py  common.py  cors.py  credentials.py  download.py  error.py  filelist.py  upload.py
finch/widgets/: search.py
flatpak/: com.furkankalkan.FinchS3.yml
flatpak/files/: com.furkankalkan.FinchS3.desktop  com.furkankalkan.FinchS3.metainfo.xml
scripts/: build_deb.sh  build_msi.bat  install_deps.bat
